# chessbot

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile.bot  Dockerfile.telegram-bot-api  README.md  auth_handler.py  bot.Dockerfile  bot.py  compose.yml  config.py  dev-compose.yml  find_level_handler.py  payment_handler.py  pyproject.toml  sample_video_handler.py  setupchik.py  upload_video_handler.py  web-server.Dockerfile  web-server.py  webhook.py
.github/workflows/: run-telegram-bot.yml
doc/: all_user_messages.html  db_scheme.sql  db_scheme_source.drawio  user_flow_diagram.html
src/: bot.py  databaseAPI.py  main.py  start.py  util.py  video_processor.py
src/admin_handlers/: __init__.py  add_camp.py  add_new_admin.py  add_new_city.py  admin_handlers.py  admin_main_menu.py  change_public_id.py  change_rep_rating.py  change_timetable.py  check_chess_availability.py  close_registration.py  delete_admin.py  delete_camp.py  delete_city.py  delete_timetable.py  delete_user_from_tournament.py  open_registration.py  send_push.py  show_registered.py  update_timetable.py  upload_results.py  utils.py  video_management.py
src/camp_handlers/: __init__.py  camp_handlers.py
src/lessons_handlers/: __init__.py  lessons_handlers.py
src/payments/: __init__.py  config.py  payment_handler.py  yookassa_client.py
src/profile_handlers/: __init__.py  change_age_handler.py  change_chesscom_rating_handler.py  change_city_handler.py  change_lichess_rating_handler.py  change_name_handler.py  change_nickname_handler.py  change_profile_handler.py  change_surname_handler.py  (+2 more)
(+6 files in other folders)
