[tool.poetry]
name = "chessbot"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
yookassa = "^3.4.1"
python-telegram-bot = "^21.6"
flask = "^3.0.3"
msgpack-python = "^0.5.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
