[tool.poetry]
name = "chessbot"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
yookassa = "^3.4.1"
python-telegram-bot = {extras = ["webhooks"], version = "^22.5"}
flask = "^3.0.3"
msgpack-python = "^0.5.6"
python-dotenv = "^1.1.1"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
